# py-vm-instance-aws

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: changelog.yml  lint.yml  release.yml  type.yml
scripts/: format-imports.sh  format.sh  lint.sh  test-coverage.sh  type.sh
src/ec2instances/: __init__.py  ec2_instance_mapping.py  ec2_instance_proxy.py
src/ec2instances/common/: __init__.py  mapping.py  process.py  session.py  user_data.py
src/instance-mapping/: ec2_instance_mapping.py  ec2_instance_proxy.py  vm_instance_proxy.py
src/vm-instance-aws/: __init__.py  ec2_instance_mapping.py  ec2_instance_proxy.py  vm_instance_mapping.py  vm_instance_proxy.py
src/vm_instance_aws/: ec2_instance_mapping.py  ec2_instance_proxy.py
test/: test_remote_shell.py
